# ai-benchmarking

./: .gitignore  README.md  benchmarking.py  golden_input.json  input.json  output_dataset.json  pyproject.toml
.github/workflows/: benchmark.yaml
ai_benchmarking/: __init__.py  eval.py  inference.py  judges.py  process_batches.py  utils.py
data/: input.json  knowledge_base.json
outputs/: gemini_results.json
scripts/: eval.py  inference.py  judges.py  utils.py
