[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_benchmarking"]

[project]
name = "ai-benchmarking"
version = "0.5.0"
description = "A benchmarking framework for evaluating LLM accuracy and safety in suicide risk assessment using the C-SSRS scale."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.29.0",
    "google-genai>=0.1.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "pandas>=3.0.3",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
